# Pentago

./: .gitmodules  CMakeLists.txt  main.cpp
src/: BitBoardRepresentation.cpp  BitBoardRepresentation.h  Board.cpp  Board.h  CMakeLists.txt  CellColour.h  EnumBoard.cpp  EnumBoard.h  Game.cpp  Game.h  IBoard.cpp  IBoard.h  IState.h  Move.cpp  Move.h  PlacementState.cpp  PlayerColour.h  RotationState.cpp  RotationState.h  RoundedRectangle.cpp  RoundedRectangle.h  RoundedRectangle.hpp  RoundedRectangleShape.hpp  Utilities.h  View.cpp  View.h
src/BoardRepresentation/: BitBoardRepresentation.cpp  BitBoardRepresentation.h  EnumBoard.cpp  EnumBoard.h  IBoard.cpp  IBoard.h
src/GameStates/: IState.cpp  IState.h  PlacementState.cpp  PlacementState.h  RotationState.cpp  RotationState.h
